Enhance project setup and documentation
- Update .gitignore to track example environment file
- Modify requirements.txt to include conditional dependency for backports.zoneinfo
- Add detailed docstrings for serializers, views, and throttling classes
- Implement custom throttling for task write operations
- Refactor settings.py for better environment variable management and Docker compatibility
- Create Dockerfile and docker-compose.yml for containerized deployment
- Configure Nginx for HTTPS and static/media file handling
- Add entrypoint script for database readiness and superuser creation
- Introduce .env.example for environment variable configuration

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+# Allow example env file to be tracked
+!.env.example
+
 
 # Spyder project settings
 .spyderproject
