Refactor user authentication and profile management; implement JWT authentication with cookie support, update serializers and views, and enhance settings for improved security.

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DJANGO_SUPERUSER_USERNAME=admin
 DEBUG=0
 SECRET_KEY=your-very-long-random-secret-key-here
 ALLOWED_HOSTS=join.velizar-ganchev-backend.com,127.0.0.1,localhost,https://join.velizar-ganchev.com
-CSRF_TRUSTED_ORIGINS=https://join.velizar-ganchev-backend.com,https://join.velizar-ganchev.com
+CSRF_TRUSTED_ORIGINS=https://join.velizar-ganchev-backend.com,https://join.velizar-ganchev.com,http://127.0.0.1,localhost,http://localhost:8000
 
 # Database (AWS RDS)
 USE_SQLITE=0
